--- a/404.html
+++ b/404.html
@@ -17,13 +17,13 @@
   <meta name="msapplication-TileColor" content="#6200ee">
   <[object Object]></[object Object]>
     
-    <link rel="preload" href="/assets/css/0.styles.1748c913.css" as="style"><link rel="preload" href="/assets/js/app.df0a37cc.js" as="script"><link rel="preload" href="/assets/js/5.7c40eeda.js" as="script"><link rel="preload" href="/assets/js/3.3db8a61e.js" as="script"><link rel="prefetch" href="/assets/js/10.36e6ced2.js"><link rel="prefetch" href="/assets/js/11.02e5c7d7.js"><link rel="prefetch" href="/assets/js/12.bd3b3bfc.js"><link rel="prefetch" href="/assets/js/13.663f9bab.js"><link rel="prefetch" href="/assets/js/14.0332d170.js"><link rel="prefetch" href="/assets/js/15.7bc0e8af.js"><link rel="prefetch" href="/assets/js/16.3c9b1a17.js"><link rel="prefetch" href="/assets/js/17.256c94a0.js"><link rel="prefetch" href="/assets/js/18.dda3f7a8.js"><link rel="prefetch" href="/assets/js/2.dddded28.js"><link rel="prefetch" href="/assets/js/4.ca473ff7.js"><link rel="prefetch" href="/assets/js/6.31ce5d56.js"><link rel="prefetch" href="/assets/js/7.2b85df89.js"><link rel="prefetch" href="/assets/js/8.3dc80ba1.js"><link rel="prefetch" href="/assets/js/9.80e12645.js">
+    <link rel="preload" href="/assets/css/0.styles.1748c913.css" as="style"><link rel="preload" href="/assets/js/app.419bf52a.js" as="script"><link rel="preload" href="/assets/js/5.7c40eeda.js" as="script"><link rel="preload" href="/assets/js/3.3db8a61e.js" as="script"><link rel="prefetch" href="/assets/js/10.36e6ced2.js"><link rel="prefetch" href="/assets/js/11.4ad89dc4.js"><link rel="prefetch" href="/assets/js/12.bd3b3bfc.js"><link rel="prefetch" href="/assets/js/13.663f9bab.js"><link rel="prefetch" href="/assets/js/14.1166064b.js"><link rel="prefetch" href="/assets/js/15.7bc0e8af.js"><link rel="prefetch" href="/assets/js/16.3c9b1a17.js"><link rel="prefetch" href="/assets/js/17.256c94a0.js"><link rel="prefetch" href="/assets/js/18.dda3f7a8.js"><link rel="prefetch" href="/assets/js/2.dddded28.js"><link rel="prefetch" href="/assets/js/4.ca473ff7.js"><link rel="prefetch" href="/assets/js/6.31ce5d56.js"><link rel="prefetch" href="/assets/js/7.2b85df89.js"><link rel="prefetch" href="/assets/js/8.3dc80ba1.js"><link rel="prefetch" href="/assets/js/9.80e12645.js">
     <link rel="stylesheet" href="/assets/css/0.styles.1748c913.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">
       Take me home.
     </a></div></div><div class="global-ui"><!----><!----></div></div>
-    <script src="/assets/js/app.df0a37cc.js" defer></script><script src="/assets/js/5.7c40eeda.js" defer></script><script src="/assets/js/3.3db8a61e.js" defer></script>
+    <script src="/assets/js/app.419bf52a.js" defer></script><script src="/assets/js/5.7c40eeda.js" defer></script><script src="/assets/js/3.3db8a61e.js" defer></script>
   </body>
 </html>
